// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests TagItem Active 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-tag-item charcoal-tag-item__bg"
    data-bg-variant="color"
    data-size="M"
    data-state="active"
    style={
      Object {
        "--charcoal-tag-item-bg": "#7ACCB1",
      }
    }
  >
    <div
      className="charcoal-tag-item__label"
      data-has-translate={false}
    >
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__text"
        data-has-translate={false}
      >
        #女の子
      </span>
    </div>
    <pixiv-icon
      name="16/Remove"
    />
  </button>
</div>
`;

exports[`Storybook Tests TagItem BGColor 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-tag-item charcoal-tag-item__bg"
    data-bg-variant="color"
    data-size="M"
    data-state="default"
    style={
      Object {
        "--charcoal-tag-item-bg": "var(--charcoal-brand)",
      }
    }
  >
    <div
      className="charcoal-tag-item__label"
      data-has-translate={false}
    >
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__text"
        data-has-translate={false}
      >
        女の子
      </span>
    </div>
  </button>
</div>
`;

exports[`Storybook Tests TagItem BGImage 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-tag-item charcoal-tag-item__bg"
    data-bg-variant="image"
    data-size="M"
    data-state="default"
    style={
      Object {
        "--charcoal-tag-item-bg": "url(https://charcoal-web.pixiv.design/charcoal-ogp.jpg)",
      }
    }
  >
    <div
      className="charcoal-tag-item__label"
      data-has-translate={false}
    >
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__text"
        data-has-translate={false}
      >
        #女の子
      </span>
    </div>
  </button>
</div>
`;

exports[`Storybook Tests TagItem Default 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-tag-item charcoal-tag-item__bg"
    data-bg-variant="color"
    data-size="M"
    data-state="default"
    style={
      Object {
        "--charcoal-tag-item-bg": "#7ACCB1",
      }
    }
  >
    <div
      className="charcoal-tag-item__label"
      data-has-translate={false}
    >
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__text"
        data-has-translate={false}
      >
        #女の子
      </span>
    </div>
  </button>
</div>
`;

exports[`Storybook Tests TagItem Disabled 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-tag-item charcoal-tag-item__bg"
    data-bg-variant="color"
    data-size="M"
    data-state="default"
    disabled={true}
    style={
      Object {
        "--charcoal-tag-item-bg": "#7ACCB1",
      }
    }
  >
    <div
      className="charcoal-tag-item__label"
      data-has-translate={false}
    >
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__text"
        data-has-translate={false}
      >
        #女の子
      </span>
    </div>
  </button>
</div>
`;

exports[`Storybook Tests TagItem InActive 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-tag-item charcoal-tag-item__bg"
    data-bg-variant="color"
    data-size="M"
    data-state="inactive"
    style={
      Object {
        "--charcoal-tag-item-bg": "#7ACCB1",
      }
    }
  >
    <div
      className="charcoal-tag-item__label"
      data-has-translate={false}
    >
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__text"
        data-has-translate={false}
      >
        #女の子
      </span>
    </div>
  </button>
</div>
`;

exports[`Storybook Tests TagItem Small 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-tag-item charcoal-tag-item__bg"
    data-bg-variant="color"
    data-size="S"
    data-state="default"
    style={
      Object {
        "--charcoal-tag-item-bg": "#7ACCB1",
      }
    }
  >
    <div
      className="charcoal-tag-item__label"
      data-has-translate={false}
    >
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__text"
        data-has-translate={false}
      >
        #女の子
      </span>
    </div>
  </button>
</div>
`;

exports[`Storybook Tests TagItem TranslatedLabel 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-tag-item charcoal-tag-item__bg"
    data-bg-variant="color"
    data-size="M"
    data-state="default"
    style={
      Object {
        "--charcoal-tag-item-bg": "#7ACCB1",
      }
    }
  >
    <div
      className="charcoal-tag-item__label"
      data-has-translate={true}
    >
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__translated"
      >
        girl
      </span>
      <span
        className="charcoal-tag-item-half-leading-text charcoal-tag-item__label__text"
        data-has-translate={true}
      >
        #女の子
      </span>
    </div>
  </button>
</div>
`;
